--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
-title: Halve
-description: Stylish, Two-Column Jekyll Theme
-url: https://taylantatli.github.io/Halve
+title: German Garcia
+description: Ingeniero Industrial
+url: gergarcia.github.io
 logo: halve.png                                       # Site logo
 locale: en_US
 
